--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
     }
   ],
   "require": {
-    "php": "^7.3.0|^8.0|^8.1",
-    "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0",
-    "aws/aws-sdk-php": "^3.52"
+    "php": "^7.3.0|^8.0|^8.1|^8.2|^8.3|^8.4",
+    "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
+    "aws/aws-sdk-php": "^3.52|^4.0"
   },
   "require-dev": {
-    "orchestra/testbench": "^6.0|^8.0",
-    "phpunit/phpunit": "^8.0|^9.0"
+    "orchestra/testbench": "^6.0|^8.0|^9.0",
+    "phpunit/phpunit": "^8.0|^9.0|^10.5|^11.0"
   },
   "autoload": {
     "psr-4": {
