--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "dreamonkey/laravel-cloudfront-url-signer",
+  "name": "dcodegroup/laravel-cloudfront-url-signer",
   "description": "Laravel 5.6+ wrapper around CloudFront canned signed URLs",
   "keywords": [
-    "dreamonkey",
+    "dcodegroup",
     "laravel-cloudfront-url-signer",
     "private content",
     "cloudfront"
@@ -29,7 +29,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Dreamonkey\\CloudFrontUrlSigner\\": "src"
+      "Dcodegroup\\CloudFrontUrlSigner\\": "src"
     },
     "files": [
       "src/helpers.php"
@@ -37,16 +37,16 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Dreamonkey\\CloudFrontUrlSigner\\Tests\\": "tests"
+      "Dcodegroup\\CloudFrontUrlSigner\\Tests\\": "tests"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Dreamonkey\\CloudFrontUrlSigner\\CloudFrontUrlSignerServiceProvider"
+        "Dcodegroup\\CloudFrontUrlSigner\\CloudFrontUrlSignerServiceProvider"
       ],
       "aliases": {
-        "CloudFrontUrlSigner": "Dreamonkey\\CloudFrontUrlSigner\\Facades\\CloudFrontUrlSigner"
+        "CloudFrontUrlSigner": "Dcodegroup\\CloudFrontUrlSigner\\Facades\\CloudFrontUrlSigner"
       }
     }
   }
